Adds memory guard (#35)
* Adds memory guard to function set and evolved anonymous function forms.

* Adds logging for the number of individuals that exceed the memory guard.

* Adds note about JVM to the README